--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
+
     defaultConfig {
         applicationId "com.lodz.android.jetpackdemo"
         minSdkVersion 19
